syntax = "proto3";

import "google/protobuf/empty.proto";

package PnP.Scanning.Core.Services;

service PnPScanner {
	rpc Status (StatusRequest) returns (StatusReply);
	rpc StartStreaming (StartRequest) returns (stream StartStatus);
	rpc Stop (StopRequest) returns (google.protobuf.Empty);
	rpc Ping (google.protobuf.Empty) returns (PingReply);
}

// Status
message StatusRequest {
	string Message = 1;
}

message StatusReply {
	bool Success = 1;
}

// StartStreaming
message StartRequest {
	string Mode = 1;
}

message StartStatus {
	string Status = 1;
}

// Stop
message StopRequest {
	string Site = 1;
}

// Ping
message PingReply {
	bool UpAndRunning = 1;
}